--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bsTheme.css">
-    <meta charset="UTF-8">
-    <title>HangJimmy</title>
+     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+     <link rel="stylesheet" type="text/css" href="assets/css/bsTheme.css">
+     <meta charset="UTF-8">
+     <title>HangJimmy</title>
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1> hangman </h1>
-    </div>
-    <div class="row">
-        <div class="col-md-6 text-center">
-            <div id="stageWord">
-                <span style="color: #4aeeee">Your Word:</p>
+     <div class="jumbotron">
+          <h1> hangman </h1>
+     </div>
+     <div class="row">
+          <div class="col-md-6 text-center">
+               <div id="stageWord">
+                    <span style="color: #4aeeee">Your Word:</p>
             </div>
         </div>
     </div>
@@ -33,26 +33,27 @@
             <div class="row">
                 <div class="col-md-6">
                      <img id="fateofJimmy" src="assets/images/hangmanImg7.png" width="325px" height="300px"></span>
-                <p>wins:</p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="header">
-            <div class="col-md-6">
-                <div id="message">
-                    <p></p>
-                </div>
-            </div>
-        </div>
-        <script type="text/javascript" src="assets/javascript/game.js"></script>
-        </div></script>
-        </div>
-        </div>
-        </span>
-        </div>
-        </div>
-        </div>
-        </body>
-        </html>
- 
+                    <p>wins:</p>
+               </div>
+          </div>
+     </div>
+     <div class="row">
+          <div class="header">
+               <div class="col-md-6">
+                    <div id="message">
+                         <p></p>
+                    </div>
+               </div>
+          </div>
+          <script type="text/javascript" src="assets/javascript/game.js"></script>
+     </div>
+     </script>
+     </div>
+     </div>
+     </span>
+     </div>
+     </div>
+     </div>
+</body>
+
+</html>
