--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                </div>
           </div>
-          <script type="text/javascript" src="assets/javascript/game.js"></script>
+          <script type="text/javascript" src="assets/javascript/app.js"></script>
      </div>
      </script>
      </div>
